--- a/GoodOne.ipynb
+++ b/GoodOne.ipynb
@@ -225,20 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WE HAVE APIKEY\n"
+      "NO APIKEY FOUND\n"
      ]
     }
    ],
    "source": [
     "apiKey = os.getenv(\"API_IH\")\n",
-    "print(\"WE HAVE APIKEY\") if apiKey else print(\"NO APIKEY FOUND\")"
+    "rapidapiKey = os.getenv(\"RAPIDAPI\")\n",
+    "print(\"WE HAVE APIKEY\") if rapidapiKey else print(\"NO APIKEY FOUND\")"
    ]
   },
   {
@@ -251,7 +252,7 @@
     "    try:    \n",
     "        url = \"https://movie-database-imdb-alternative.p.rapidapi.com/\"\n",
     "        querystring = {\"page\":\"1\",\"r\":\"json\",\"s\":titulo}\n",
-    "        headers = {'x-rapidapi-host': \"movie-database-imdb-alternative.p.rapidapi.com\",'x-rapidapi-key': \"e0036560bdmsh47b2555b69c4d3ep1b7788jsn26958ed59ecd\"}\n",
+    "        headers = {'x-rapidapi-host': \"movie-database-imdb-alternative.p.rapidapi.com\",'x-rapidapi-key': }\n",
     "        response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
     "        response=(response.text)\n",
     "        response=((response.replace(' ','').replace('\"imdbID\":',\" \").replace(',\"Type\":',' ').split())[1]).replace('\\\"',\"\")\n",
